--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
 </head>
 <body>
 	<h1>My projects</h1>
+	<h3>(projects with databases are not direcly functionnal and are not shown here)</h3>
 	<ul>
+		<a href="initium/index.html"><li>initium</li></a>
 		<a href="pathFinder/index.html"><li>javascript path finder</li></a>
 		<a href="snakeJs/index.html"><li>snake game in javascript</li></a>
 		<a href="snakePy/index.html"><li>snake game in python</li></a>
