make disclamer clearer

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 	<h1>My projects</h1>
-	<h3>(projects with databases are not direcly functionnal and are not shown here)</h3>
+	<h3>(projects with databases are not direcly functionnal and are not shown here, or editted to ignore database errors)</h3>
 	<ul>
 		<a href="initium/index.html"><li>initium</li></a>
 		<a href="pathFinder/index.html"><li>javascript path finder</li></a>
